--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:padding="15sp"
+                    android:layout_margin="15sp"
                     android:background="@null"
                     android:src="@drawable/ic_audiotrack_white_24dp"/>
+
+                <ImageButton
+                    android:id="@+id/user_profile_btn"
+                    android:layout_width="32sp"
+                    android:layout_height="32sp"
+                    android:layout_gravity="right|end"
+                    android:layout_margin="5sp"
+                    android:background="@null"
+                    android:src="@drawable/ic_person_black_48dp"/>
 
             </android.support.v7.widget.Toolbar>
 
