--- a/app/src/main/res/layout/friends_row.xml
+++ b/app/src/main/res/layout/friends_row.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="1sp"
-    android:weightSum="10">
+    android:weightSum="20">
 
-    <ImageView
-        android:layout_margin="10sp"
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/display_picture"
-        android:layout_width="0sp"
-        android:layout_height="40sp"
-        android:layout_weight="1.25"
-        android:background="@color/secondaryTextColor"
-        android:padding="2sp"/>
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:src="@drawable/ic_person_black_48dp"
+        app:civ_border_width="4sp"
+        app:civ_shadow="true"
+        app:civ_shadow_radius="2"
+        app:civ_shadow_color="#FFFFFF"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_weight="1"
+        android:layout_marginLeft="16sp"/>
 
     <RelativeLayout
-        android:layout_weight="8.75"
+        android:layout_weight="19"
         android:layout_width="0sp"
-        android:layout_height="fill_parent"
-        android:padding="@dimen/default_track_list_row_padding">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/default_track_list_row_padding"
+        android:layout_margin="4sp">
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="sans-serif-medium"
             android:text="User Name"
             android:textSize="15sp"
             android:singleLine="true"
@@ -33,14 +39,14 @@
             android:scrollHorizontally="true"
             android:textColor="@color/primaryTextColor"/>
         <TextView
-            android:id="@+id/extra_info"
+            android:id="@+id/status"
+            android:layout_marginTop="4sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
-            android:text="..."
-            android:textSize="10sp"
-            android:fontFamily="sans-serif-light"
-            android:textStyle="italic"/>
+            android:text="Status"
+            android:textSize="13sp"
+            android:fontFamily="sans-serif-light"/>
     </RelativeLayout>
 
 </LinearLayout>
