--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -5,9 +5,8 @@
     tools:context=".fragment.FriendsListFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/friends_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/defaultCardBg">
+        android:id="@+id/friends_list_recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
 </FrameLayout>
