--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
                     android:layout_width="32sp"
                     android:layout_height="32sp"
                     android:layout_gravity="right|end"
+                    android:scaleType="fitCenter"
                     android:layout_margin="5sp"
                     android:background="@null"
                     android:src="@drawable/ic_person_black_48dp"/>
