--- a/app/src/main/res/layout/card_song_details.xml
+++ b/app/src/main/res/layout/card_song_details.xml
@@ -120,11 +120,11 @@
                     <RatingBar
                         style="?android:attr/ratingBarStyleSmall"
                         android:id="@+id/rating"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:numStars="5"
-                        android:rating="3"
-                        android:stepSize="1"
+                        android:rating="0.0"
+                        android:stepSize="0.5"
                         android:layout_gravity="center_vertical|center_horizontal"/>
                 </RelativeLayout>
             </LinearLayout>
