--- a/app/src/main/res/layout/content_song_share.xml
+++ b/app/src/main/res/layout/content_song_share.xml
@@ -17,6 +17,7 @@
     android:background="@color/defaultCardBg">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/select_friends_card"
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_marginLeft="8sp"
