--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -7,6 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/friends_list_recycler_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/defaultCardBg">
     </android.support.v7.widget.RecyclerView>
 </FrameLayout>
