--- a/app/src/main/res/layout/track_row.xml
+++ b/app/src/main/res/layout/track_row.xml
@@ -41,7 +41,7 @@
             android:text="Artist"
             android:fontFamily="sans-serif-light"
             android:textSize="12sp"
-            android:singleLine="true"
+            android:maxLines="1"
             android:ellipsize="marquee"/>
 
         <ImageView
