--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,14 +32,14 @@
                     android:background="@null"
                     android:src="@drawable/ic_audiotrack_white_24dp"/>
 
-                <ImageButton
+                <com.mikhaellopez.circularimageview.CircularImageView
                     android:id="@+id/user_profile_btn"
-                    android:layout_width="32sp"
-                    android:layout_height="32sp"
+                    android:layout_width="40sp"
+                    android:layout_height="40sp"
                     android:layout_gravity="right|end"
-                    android:scaleType="fitCenter"
                     android:layout_margin="5sp"
-                    android:background="@null"
+                    app:civ_border_color="#FFFFFF"
+                    app:civ_border_width="1sp"
                     android:src="@drawable/ic_person_black_48dp"/>
 
             </android.support.v7.widget.Toolbar>
