--- a/app/src/main/res/layout/activity_row_card.xml
+++ b/app/src/main/res/layout/activity_row_card.xml
@@ -61,7 +61,6 @@
             android:layout_marginLeft="8sp"
             android:layout_marginTop="8sp"
             android:layout_marginBottom="8sp"
-            android:textColor="@color/primaryTextColor"
-            android:textStyle="italic"/>
+            android:textColor="@color/primaryTextColor"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
