--- a/app/src/main/res/layout/album_grid.xml
+++ b/app/src/main/res/layout/album_grid.xml
@@ -4,7 +4,7 @@
     xmlns:album_grid_card="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/album_grid_card"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="200sp"
     album_grid_card:cardCornerRadius="3sp"
     android:layout_margin="5sp">
@@ -17,13 +17,13 @@
 
         <ImageView
             android:layout_weight="8"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0sp"
             android:id="@+id/album_art"
-            android:foregroundGravity="center"
-            android:layout_centerHorizontal="true"
             android:background="@color/defaultCardBg"
-            android:src="@drawable/ic_headset_white_24dp"/>
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"/>
         <TextView
             android:layout_weight="2"
             android:layout_width="fill_parent"
