--- a/app/src/main/res/layout/track_row.xml
+++ b/app/src/main/res/layout/track_row.xml
@@ -66,5 +66,6 @@
         android:background="@android:color/transparent"
         android:layout_width="0sp"
         android:layout_height="match_parent"
-        android:id="@+id/options"/>
+        android:id="@+id/options"
+        android:src="@drawable/ic_more_vert_black_24dp"/>
 </LinearLayout>
