Dynamic Permission feature added. Built an error template Fragment. Created an activity to display userslist. A view of all users who have liked the song. Partially made some fragments stateless.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,13 +66,11 @@
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0sp"/>
-            <fragment
+            <FrameLayout
                 android:layout_weight="1.5"
                 android:id="@+id/media_controls_fragment"
-                android:name="com.thesocialplaylist.user.music.fragment.musicplayer.mediacontroller.MediaControllerFragment"
                 android:layout_width="match_parent"
-                android:layout_height="0sp"
-                tools:layout="@layout/media_controller_fragment"/>
+                android:layout_height="0sp"/>
 
         </LinearLayout>
         <!--<android.support.design.widget.NavigationView
