--- a/app/src/main/res/layout/card_song_details.xml
+++ b/app/src/main/res/layout/card_song_details.xml
@@ -29,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0sp"
                 android:layout_weight="2"
+                android:layout_margin="8sp"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
