Added a view attribute to each song for a user profile. Fixed a NPE when the USer Cache was null.

--- a/app/src/main/res/layout/fragment_error_template.xml
+++ b/app/src/main/res/layout/fragment_error_template.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.thesocialplaylist.user.music.ErrorTemplateFragment">
+    tools:context="com.thesocialplaylist.user.music.fragment.ErrorTemplateFragment">
 
     <ImageView
         android:id="@+id/error_display_icon"
