--- a/app/src/main/res/layout/content_track_action_buttons.xml
+++ b/app/src/main/res/layout/content_track_action_buttons.xml
@@ -2,11 +2,35 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <LinearLayout android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginLeft="32sp">
+
+        <TextView
+            android:id="@+id/no_of_views"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-light" />
+
+        <ImageView
+            android:id="@+id/views_icon"
+            android:layout_width="18sp"
+            android:layout_height="20sp"
+            android:src="@drawable/ic_touch_app_black_24dp"
+            android:scaleType="fitCenter"
+            android:tint="@color/secondaryTextColor"
+            android:layout_marginLeft="4sp"/>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginLeft="32sp">
 
         <TextView
             android:id="@+id/no_of_likes"
@@ -21,6 +45,7 @@
             android:layout_width="18sp"
             android:layout_height="18sp"
             android:src="@drawable/ic_thumb_up_black_24dp"
+            android:tint="@color/secondaryTextColor"
             android:scaleType="fitCenter"
             android:layout_marginLeft="4sp"/>
 
@@ -31,7 +56,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:layout_marginLeft="64sp">
+        android:layout_marginLeft="32sp">
 
         <TextView
             android:id="@+id/no_of_shares"
@@ -46,6 +71,7 @@
             android:layout_width="18sp"
             android:layout_height="18sp"
             android:src="@drawable/ic_share_black_48dp"
+            android:tint="@color/secondaryTextColor"
             android:scaleType="fitCenter"
             android:layout_marginLeft="4sp"/>
 
