--- a/app/src/main/res/layout/activity_row_card.xml
+++ b/app/src/main/res/layout/activity_row_card.xml
@@ -10,7 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginRight="8sp"
+        android:layout_marginLeft="8sp">
+
         <TextView
             android:id="@+id/timestamp"
             android:layout_width="match_parent"
@@ -19,22 +22,33 @@
             android:gravity="end"
             android:textSize="10sp"
             android:fontFamily="sans-serif-normal"
-            android:layout_marginRight="8sp"
-            android:layout_marginLeft="8sp"
             android:layout_marginTop="8sp"/>
 
-        <TextView
-            android:id="@+id/headline"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="User1 shared this song."
-            android:gravity="start"
-            android:textSize="13sp"
-            android:fontFamily="sans-serif-normal"
-            android:layout_marginRight="8sp"
-            android:layout_marginLeft="8sp"
-            android:layout_marginTop="8sp"
-            android:textColor="@color/primaryTextColor"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="8sp">
+
+            <ImageView
+                android:id="@+id/dp_poster"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:src="@drawable/ic_person_black_48dp" />
+
+            <TextView
+                android:id="@+id/headline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="User1 shared this song."
+                android:gravity="start"
+                android:textSize="13sp"
+                android:fontFamily="sans-serif-normal"
+                android:layout_marginTop="4sp"
+                android:layout_marginLeft="8sp"
+                android:textColor="@color/primaryTextColor"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/song_info"
@@ -44,10 +58,18 @@
             android:gravity="start"
             android:textSize="13sp"
             android:fontFamily="sans-serif-normal"
-            android:layout_marginRight="8sp"
-            android:layout_marginLeft="8sp"
             android:layout_marginTop="8sp"
-            android:textColor="@color/secondaryTextColor"/>
+            android:textColor="@color/secondaryTextColor"
+            android:visibility="gone"/>
+
+        <LinearLayout
+            android:id="@+id/preview_layout"
+            android:layout_width="match_parent"
+            android:layout_height="100sp"
+            android:layout_marginTop="8sp">
+            <include
+                layout="@layout/song_preview"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/caption"
@@ -57,10 +79,33 @@
             android:gravity="start"
             android:textSize="13sp"
             android:fontFamily="sans-serif-normal"
-            android:layout_marginRight="8sp"
-            android:layout_marginLeft="8sp"
-            android:layout_marginTop="8sp"
-            android:layout_marginBottom="8sp"
             android:textColor="@color/primaryTextColor"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="4sp"
+            android:layout_marginBottom="8sp">
+
+            <TextView
+                android:id="@+id/no_of_likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="15sp"
+                android:layout_marginTop="2sp"
+                android:fontFamily="sans-serif-light"/>
+
+            <ImageView
+                android:id="@+id/like_btn"
+                android:layout_width="18sp"
+                android:layout_height="20sp"
+                android:src="@drawable/ic_thumb_up_black_24dp"
+                android:scaleType="fitCenter"
+                android:tint="@color/secondaryTextColor"
+                android:layout_marginLeft="4sp"
+                android:layout_gravity="top"/>
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
