--- a/app/src/main/res/layout/activity_song_share.xml
+++ b/app/src/main/res/layout/activity_song_share.xml
@@ -17,18 +17,20 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <ImageButton
+                android:id="@+id/submit"
+                android:layout_width="36sp"
+                android:layout_height="36sp"
+                android:layout_marginRight="24sp"
+                android:layout_gravity="right"
+                android:background="@null"
+                android:src="@drawable/ic_send_white_48dp"
+                android:scaleType="fitCenter"/>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_song_share" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_send_white_48dp" />
-
 </android.support.design.widget.CoordinatorLayout>
