--- a/app/src/main/res/layout/content_song_share.xml
+++ b/app/src/main/res/layout/content_song_share.xml
@@ -17,13 +17,45 @@
     android:background="@color/defaultCardBg">
 
     <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_marginLeft="8sp"
+        android:layout_marginRight="8sp"
+        android:layout_marginBottom="8sp"
+        android:layout_weight="1">
+
+        <RadioGroup
+            android:id="@+id/socialActivityRadioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <RadioButton android:id="@+id/dedicate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dedicate"
+                android:onClick="setSocialActivityType"/>
+            <RadioButton android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share"
+                android:onClick="setSocialActivityType"/>
+            <RadioButton android:id="@+id/recommend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recommend"
+                android:onClick="setSocialActivityType"/>
+        </RadioGroup>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
         android:id="@+id/select_friends_card"
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_marginLeft="8sp"
         android:layout_marginRight="8sp"
         android:layout_marginBottom="8sp"
-        android:layout_weight="4">
+        android:layout_weight="3">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,11 +103,13 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/song_metadata_card"
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="6"
+        android:layout_weight="3"
         android:layout_marginLeft="8sp"
-        android:layout_marginRight="8sp">
+        android:layout_marginRight="8sp"
+        android:layout_marginBottom="8sp">
         <LinearLayout
             android:layout_margin="8sp"
             android:orientation="vertical"
@@ -107,24 +141,43 @@
                 android:hint="Album"
                 android:textSize="13sp"
                 android:fontFamily="sans-serif-normal"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-            <android.support.design.widget.TextInputLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/external_link_card"
+        android:layout_width="match_parent"
+        android:layout_height="100sp"
+        android:layout_weight="3"
+        android:layout_marginTop="8sp"
+        android:layout_marginLeft="8sp"
+        android:layout_marginRight="8sp"
+        android:layout_marginBottom="8sp"
+        android:visibility="gone">
+        <include
+            layout="@layout/song_preview"/>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="3"
+        android:layout_marginLeft="8sp"
+        android:layout_marginRight="8sp">
+        <LinearLayout
+            android:layout_margin="8sp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/caption"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:inputType="textMultiLine"
-                    android:gravity="top|start"
-                    android:nestedScrollingEnabled="true"
-                    android:layout_marginTop="4sp"
-                    android:id="@+id/caption"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Caption..."
-                    android:textSize="13sp"
-                    android:lines="2"/>
-
-            </android.support.design.widget.TextInputLayout>
-
+                android:layout_height="wrap_content"
+                android:hint="Caption"
+                android:textSize="13sp"
+                android:fontFamily="sans-serif-normal"
+                android:maxLines="2"/>
             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
