--- a/app/src/main/res/layout/content_user_profile_appbar.xml
+++ b/app/src/main/res/layout/content_user_profile_appbar.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -25,31 +26,115 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:weightSum="3">
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="32sp">
 
                 <TextView
-                    android:text="User Name"
-                    android:gravity="center_horizontal|bottom"
-                    android:layout_width="match_parent"
+                    android:gravity="center|bottom"
+                    android:layout_width="wrap_content"
                     android:layout_height="0sp"
                     android:layout_weight="2"
-                    android:textSize="20sp"
-                    android:id="@+id/user_name"
+                    android:textSize="32sp"
+                    android:id="@+id/no_of_friends"
+                    android:layout_gravity="center"
                     android:textColor="#FFFFFF"
                     android:fontFamily="sans-serif-medium"/>
 
                 <TextView
-                    android:id="@+id/user_status"
-                    android:text="Status"
+                    android:text="Friends"
                     android:gravity="center|top"
-                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
                     android:layout_height="0sp"
                     android:layout_weight="1"
                     android:textSize="13sp"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="sans-serif-normal"
                     android:textColor="@android:color/white"
                     android:layout_marginTop="8sp"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="12sp">
+
+            <TextView
+                android:id="@+id/no_of_songs"
+                android:gravity="center|bottom"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0sp"
+                android:layout_weight="2"
+                android:textSize="32sp"
+                android:textColor="#FFFFFF"
+                android:fontFamily="sans-serif-medium"/>
+
+            <TextView
+                android:text="Songs"
+                android:gravity="center|top"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0sp"
+                android:layout_weight="1"
+                android:textSize="13sp"
+                android:fontFamily="sans-serif-normal"
+                android:textColor="@android:color/white"
+                android:layout_marginTop="8sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="12sp">
+
+            <TextView
+                android:gravity="center|bottom"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0sp"
+                android:layout_weight="2"
+                android:textSize="32sp"
+                android:id="@+id/no_of_activities"
+                android:textColor="#FFFFFF"
+                android:fontFamily="sans-serif-medium"/>
+
+            <TextView
+                android:text="Activities"
+                android:gravity="center|top"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0sp"
+                android:layout_weight="1"
+                android:textSize="13sp"
+                android:fontFamily="sans-serif-normal"
+                android:textColor="@android:color/white"
+                android:layout_marginTop="8sp"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8sp"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="18sp"
+            android:layout_height="18sp"
+            android:src="@drawable/ic_audiotrack_white_24dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:id="@+id/user_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:fontFamily="sans-serif-light"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="#FFFFFF"
+            android:layout_marginLeft="4sp"
+            android:text="(No Status)"
+            android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
